--- a/MongoCRUD/package.json
+++ b/MongoCRUD/package.json
@@ -15,6 +15,7 @@
     "express": "^4.19.2",
     "mongodb": "^6.5.0",
     "node-cron": "^3.0.3",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "node-schedule": "^2.1.1"
   }
 }
